--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
 </header>
 <main>
 	<section class="about">
-		<div class="e-container">
-			<h2 class="about__title">Детальніше про Git</h2>
-			<p class="about__desc">Git - розподілена система контролю версій, яка дає можливість розробникам відстежувати зміни в файлах і працювати спільно з іншими розробниками. Вона була розроблена в 2005 році Лінус Торвальдс, творцем Linux, для того, щоб інші розробники могли вносити свій вклад в ядро ​​Linux. Git відомий своєю швидкістю, простим дизайном, підтримкою нелінійної розробки, повної децентралізацією і можливістю ефективно працювати з великими проектами.</p>
-			<p class="about__desc">	Git варто окремо від інших ВКВ через підхід до роботи з даними. Більшість інших систем зберігають інформацію у вигляді списку змін в файлах. Замість цього, підхід Git до зберігання даних більше схожий на набір знімків мініатюрної файлової системи. Кожен раз, коли ви зберігаєте стан свого проекту в Git, система запам'ятовує, як виглядає кожен файл в цей момент, і зберігає посилання на цей знімок.</p>
-			<p class="about__desc">Git є набором утиліт командного рядка, які дозволяють відстежувати і записувати зміни в файлах (найчастіше коду, але ви можете відстежувати будь-що). З її допомогою ви можете відновити старі версії вашого проекту, порівнювати, аналізувати, об'єднувати зміни та багато іншого. Цей процес називається управлінням версіями. Є багато подібних систем контролю версій. Можливо, ви вже чули деякі з них: SVN, Mercurial, Perforce, CVS, Bitkeeper та ін.</p>
-		
+		<div class="e-container row">
+			<div class="about__content col-12 col-sm-12 col-lg-7">
+				<h2 class="about__title">Детальніше про Git</h2>
+				<p class="about__desc">Git - розподілена система контролю версій, яка дає можливість розробникам відстежувати зміни в файлах і працювати спільно з іншими розробниками. Вона була розроблена в 2005 році Лінус Торвальдс, творцем Linux, для того, щоб інші розробники могли вносити свій вклад в ядро ​​Linux. Git відомий своєю швидкістю, простим дизайном, підтримкою нелінійної розробки, повної децентралізацією і можливістю ефективно працювати з великими проектами.</p>
+				<p class="about__desc">	Його варто окремо від інших ВКВ через підхід до роботи з даними. Більшість інших систем зберігають інформацію у вигляді списку змін в файлах. Замість цього, підхід Git до зберігання даних більше схожий на набір знімків мініатюрної файлової системи. Кожен раз, коли ви зберігаєте стан свого проекту в Git, система запам'ятовує, як виглядає кожен файл в цей момент, і зберігає посилання на цей знімок.</p>
+				<p class="about__desc">Підсумовуючи, можна сказати що Git є набором утиліт командного рядка, які дозволяють відстежувати і записувати зміни в файлах (найчастіше коду, але ви можете відстежувати будь-що). З її допомогою ви можете відновити старі версії вашого проекту, порівнювати, аналізувати, об'єднувати зміни та багато іншого. Цей процес називається управлінням версіями. Є багато подібних систем контролю версій. Можливо, ви вже чули деякі з них: SVN, Mercurial, Perforce, CVS, Bitkeeper та ін.</p>
+			</div>
+			<div class="about__img col-12 col-sm-12 col-lg-5">
+				<img src="images/git-image.png" alt="">
+			</div>
+			
 		</div>
 	</section>
 </main>
