--- a/index.html
+++ b/index.html
@@ -32,25 +32,88 @@
 		
 	
 	<div class="header__content">
-		<div class="e-container">
-			<h1 class="header__title">Знайомство з Git</h1>
-			<p class="header__desc">Git - це розподілена система контролю версій з відкритим кодом, розроблена для швидкого та ефективного управління всіма проектами - від малих до дуже великих.</p>
+		<div class="e-container row">
+			<div class="content-wr col-lg-7">
+				<h1 class="header__title">Знайомство з Git</h1>
+				<p class="header__desc">Git - це розподілена система контролю версій з відкритим кодом, розроблена для швидкого та ефективного управління всіма проектами - від малих до дуже великих. З його допомогою ви можете відновити старі версії вашого проекту, порівнювати, аналізувати, об'єднувати зміни та багато іншого.</p>
+			</div>
 		</div>
 	</div>
 </header>
 <main>
 	<section class="about">
-		<div class="e-container row">
+		<div class="e-container row no-gutters">
 			<div class="about__content col-12 col-sm-12 col-lg-7">
 				<h2 class="about__title">Детальніше про Git</h2>
 				<p class="about__desc">Git - розподілена система контролю версій, яка дає можливість розробникам відстежувати зміни в файлах і працювати спільно з іншими розробниками. Вона була розроблена в 2005 році Лінус Торвальдс, творцем Linux, для того, щоб інші розробники могли вносити свій вклад в ядро ​​Linux. Git відомий своєю швидкістю, простим дизайном, підтримкою нелінійної розробки, повної децентралізацією і можливістю ефективно працювати з великими проектами.</p>
-				<p class="about__desc">	Його варто окремо від інших ВКВ через підхід до роботи з даними. Більшість інших систем зберігають інформацію у вигляді списку змін в файлах. Замість цього, підхід Git до зберігання даних більше схожий на набір знімків мініатюрної файлової системи. Кожен раз, коли ви зберігаєте стан свого проекту в Git, система запам'ятовує, як виглядає кожен файл в цей момент, і зберігає посилання на цей знімок.</p>
+				<p class="about__desc">	Підхід Git до зберігання даних більше схожий на набір знімків мініатюрної файлової системи. Кожен раз, коли ви зберігаєте стан свого проекту в Git, система запам'ятовує, як виглядає кожен файл в цей момент, і зберігає посилання на цей знімок.</p>
 				<p class="about__desc">Підсумовуючи, можна сказати що Git є набором утиліт командного рядка, які дозволяють відстежувати і записувати зміни в файлах (найчастіше коду, але ви можете відстежувати будь-що). З її допомогою ви можете відновити старі версії вашого проекту, порівнювати, аналізувати, об'єднувати зміни та багато іншого. Цей процес називається управлінням версіями. Є багато подібних систем контролю версій. Можливо, ви вже чули деякі з них: SVN, Mercurial, Perforce, CVS, Bitkeeper та ін.</p>
 			</div>
 			<div class="about__img col-12 col-sm-12 col-lg-5">
 				<img src="images/git-image.png" alt="">
 			</div>
 			
+		</div>
+	</section>
+	<section class="terms">
+		<div class="e-container">
+			<h2 class="terms__title">Основні терміни</h2>
+			<ul class="terms__list">
+				<li class="terms__list-item">
+					<p>Репозиторій (repository)</p>
+					<p>Часто згадується як репо. Репозиторій - це колекція файлів і папок, які ви використовуєте для відстеження git. Репозиторій складається з усієї історії змін вашої команди в проекті. Це сховище, на якому зберігається код, який додали ви і ваша команда.</p>
+				</li>
+				<li class="terms__list-item">
+					<p>GitHub</p>
+					<p>Найпопулярніше віддалене сховище для git-репозиторіїв. Він дозволяє вам встановлювати права доступу до проектів, відстежувати і відправляти помилки, приймати запити на поліпшення, підписуватися на повідомлення сховища, використовувати графічний інтерфейс, а не командний рядок. Репо за замовчуванням відкриті, але приватні репозиторії можна створити маючи платний акаунт.</p>
+				</li>
+				<li class="terms__list-item">
+					<p>Фіксація (commit)</p>
+					<p>Це збереження вашої роботи. Коли ви фіксуєте репозиторій, це схоже на те, що ви збираєте файли в тому вигляді, в якому вони існують в даний момент, і ставите їх в капсулу часу. Фіксація буде існувати тільки на вашому локальному комп'ютері, поки вона не буде відправлена ​​на віддалений репозиторій.</p>
+				</li>
+				<li class="terms__list-item">
+					<p>Відправлення (push)</p>
+					<p>Відправлення - це синхронізація ваших збережень (комітів) з хмарою (знову ж таки, ймовірно, Github). Ви також можете використовувати кілька коммітов одночасно. Ви можете працювати в автономному режимі, зробити багато роботи, а потім передати все це на Github.</p>
+				</li>
+				<li class="terms__list-item">
+					<p>Гілка (branch)</p>
+					<p>Git-репо можна представити у вигляді дерева. Стовбур дерева називається мастер-гілкою (Master Branch). Гілки цього дерева це окремі екземпляри коду, який відрізняється від основної бази. Ви можете відгалуджити одну функцію або експериментальний патч. Розгалужуючись, ви можете зберегти цілісність основного програмного забезпечення і мати можливість відкотитися, якщо зробите щось зовсім божевільне. Це також дозволяє вам працювати над своїм завданням, не впливаючи на вашу команду (або вона на вас).</p>
+				</li>
+				<li class="terms__list-item">
+					<p>Об'єднання (merge)</p>
+					<p>Коли гілка виправлена і на вашу думку не містить помилок, то готова стати частиною основної бази коду, тобто вона буде об'єднана з головною гілкою. Об'єднання - це те, на що це схоже: злиття двох гілок. Будь-який новий або оновлений код стане частиною кодової бази. Той, хто відгалужується від точки злиття, також буде мати цей код в своїй галузі.</p>
+				</li>
+				<li class="terms__list-item">
+					<p>Клонування (clone)</p>
+					<p>Клонування репозиторію - власне назва говорить сама за себе. Воно бере весь онлайн-репозиторій і робить точну копію на вашому локальному комп'ютері. Вам потрібно буде зробити це по ряду причин, і не в останню чергу для збереження сумісності.</p>
+				</li>
+				<li class="terms__list-item">
+					<p>Запит на підтвердження (Pull Request)</p>
+					<p>Запит на підтвердження - це коли ви відправляєте запит до внесених вами змінами які повинні бути перенесені (або об'єднані) в основну гілку (Master Branch) сховища. Якщо запит на підтвердження буде схвалений, ви офіційно внесете свої зміни в програмне забезпечення, і Github завжди буде показувати, що саме ви зробили. Однак, якщо запит відхиляється з якої-небудь причини, компілятор зможе дати відгук про те, чому запит був відхилений і що ви можете зробити, щоб він був прийнятий.</p>
+				</li>
+
+			</ul>
+		</div>
+	</section>
+	<section class="reasons">
+		<div class="e-container">
+			<h2 class="reasons__title">Навіщо протрібен Git</h2>
+			<p class="reasons__text">Зазвичай вся робота над проектом (сайтом) з боку розробника зводиться до трьох простих операцій:</p>
+			<ul class="reasons__list">
+				<li class="reasons__list-item">видалення</li>
+				<li class="reasons__list-item">додавання</li>
+				<li class="reasons__list-item">зміна</li>
+			</ul>
+			<p class="reasons__text">І коли сайт складається з менш ніж 10 файлів, то проблем з цим немає: і так зрозуміло, що де видалено або додано.</p>
+			<p class="reasons__text">Але чим більше і ширше проект, тим більше людей в ньому задіяно, і роботу кожного розробника над кожною версією стає складно контролювати. А це необхідно: адже люди припускаються помилок, а також можуть одночасно працювати з одним і тим же файлом, і без контролю версій збережеться тільки версія роботи одного з програмістів.</p>
+			<p class="reasons__text">З приходом VCS працювати стало набагато простіше:</p>
+			<ul class="reasons__list">
+				<li class="reasons__list-item">можна повертати назад зміни, якщо сенсу в їх впровадженні немає</li>
+				<li class="reasons__list-item">можна швидко і безболісно відновлювати пошкоджені файли</li>
+				<li class="reasons__list-item">можна визначити, хто з команди писав певний блок коду</li>
+				<li class="reasons__list-item">можна стежити за процесом, навіть якщо в один і той же момент над одним модулем працює кілька розробників або навіть команд по всьому світу</li>
+
+			</ul>
 		</div>
 	</section>
 </main>
