--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <header class="header">
 			<nav class="navigation">
 				<div class="e-container">
-					<a href="#" class="header__logo"><img src="images/logo.png" alt=""></a>
+					<a href="/index.html" class="header__logo"><img src="images/logo.png" alt=""></a>
 					<ul class="menu">
-						<li class="menu__item"><a href="#" class="menu__link">Встановлення Git</a></li>
+						<li class="menu__item"><a href="/setup.html" class="menu__link">Встановлення Git</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Основи Git</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Команди Git</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Робота з гілками</a></li>
+						<li class="menu__item"><a href="/branch-work.html" class="menu__link">Робота з гілками</a></li>
 						<li class="menu__item"><a href="" class="menu__link">GitHub</a></li>
 					</ul>
 				</div>
@@ -117,7 +117,16 @@
 		</div>
 	</section>
 </main>
-<footer></footer>
+<footer class="footer">
+    <div class="e-container row">
+        <h2 class="col-md-12">Корисні посилання</h2>
+        <ul class="col-md-6">
+            <li><a href="https://git-scm.com/" target="_blank">Документація Git</a></li>
+            <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+        </ul>
+    </div>
+    
+</footer>
 	<!-- Scripts -->
 	<script src="js/libs/jquery-3.4.1.min.js"></script>
 	<script src="js/main.js"></script>
