--- a/branch-work.html
+++ b/branch-work.html
@@ -22,7 +22,7 @@
 					<a href="/index.html" class="header__logo"><img src="images/logo.png" alt=""></a>
 					<ul class="menu">
 						<li class="menu__item"><a href="/setup.html" class="menu__link">Встановлення Git</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Основи Git</a></li>
+						<li class="menu__item"><a href="/base.html" class="menu__link">Основи Git</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Команди Git</a></li>
 						<li class="menu__item menu__item--active"><a href="/branch-work.html" class="menu__link">Робота з гілками</a></li>
 						<li class="menu__item"><a href="" class="menu__link">GitHub</a></li>
@@ -33,7 +33,7 @@
 	
 	<div class="br-header__content">
 		<div class="e-container row">
-			<div class="content-wr col-lg-7">
+			<div class="content-wr col-lg-12">
 				<h1 class="header__title">Розгалуження в Git</h1>
 				<p class="header__desc">Майже кожна СКВ має підтримку розгалуження. Розгалуження означає, що ви відгалуджуєтесь від основної лінії розробки і продовжуєте роботу, не втручаючись в основну лінію. У багатьох СКВ це в деякому роді дорогий процес, часто вимагає від вас створення нової копії директорії з вихідним кодом, що займає багато часу для великих проектів.</p>
 			</div>
@@ -113,11 +113,17 @@
     <div class="e-container row">
         <h2 class="col-md-12">Корисні посилання</h2>
         <ul class="col-md-6">
-            <li><a href="https://git-scm.com/" target="_blank">Документація Git</a></li>
+            <li><a href="https://git-scm.com/" target="_blank">Офіційний сайт Git</a></li>
+            <li><a href="https://git-scm.com/book/ru/v2" target="_blank">Документація Git</a></li>
+            <li><a href="http://uleming.github.io/gitbook/index.html" target="_blank">Git Community</a></li>
+            <li><a href="https://try.github.io/" target="_blank">Try Git</a></li>
             <li><a href="https://github.com/" target="_blank">GitHub</a></li>
         </ul>
     </div>
-    
+    <div class="copy">
+        <p>Черниш Маргарита</p>
+        <p>2020</p>
+    </div>
 </footer>
 	<!-- Scripts -->
 	<script src="js/libs/jquery-3.4.1.min.js"></script>
