--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			<nav class="navigation">
 				<div class="e-container">
 					<a href="/index.html" class="header__logo"><img src="images/logo.png" alt=""></a>
-					<ul class="menu">
+					<ul class="menu white">
 						<li class="menu__item"><a href="/setup.html" class="menu__link">Встановлення Git</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Основи Git</a></li>
+						<li class="menu__item"><a href="/base.html" class="menu__link">Основи Git</a></li>
 						<li class="menu__item"><a href="" class="menu__link">Команди Git</a></li>
 						<li class="menu__item"><a href="/branch-work.html" class="menu__link">Робота з гілками</a></li>
 						<li class="menu__item"><a href="" class="menu__link">GitHub</a></li>
@@ -121,11 +121,17 @@
     <div class="e-container row">
         <h2 class="col-md-12">Корисні посилання</h2>
         <ul class="col-md-6">
-            <li><a href="https://git-scm.com/" target="_blank">Документація Git</a></li>
-            <li><a href="https://github.com/" target="_blank">GitHub</a></li>
-        </ul>
+					<li><a href="https://git-scm.com/" target="_blank">Офіційний сайт Git</a></li>
+					<li><a href="https://git-scm.com/book/ru/v2" target="_blank">Документація Git</a></li>
+					<li><a href="http://uleming.github.io/gitbook/index.html" target="_blank">Git Community</a></li>
+					<li><a href="https://try.github.io/" target="_blank">Try Git</a></li>
+					<li><a href="https://github.com/" target="_blank">GitHub</a></li>
+			</ul>
     </div>
-    
+    <div class="copy">
+			<p>Черниш Маргарита</p>
+			<p>2020</p>
+	</div>
 </footer>
 	<!-- Scripts -->
 	<script src="js/libs/jquery-3.4.1.min.js"></script>
