--- a/branch-work.html
+++ b/branch-work.html
@@ -23,7 +23,7 @@
 					<ul class="menu">
 						<li class="menu__item"><a href="/setup.html" class="menu__link">Встановлення Git</a></li>
 						<li class="menu__item"><a href="/base.html" class="menu__link">Основи Git</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Команди Git</a></li>
+						<li class="menu__item"><a href="/commands.html" class="menu__link">Команди Git</a></li>
 						<li class="menu__item menu__item--active"><a href="/branch-work.html" class="menu__link">Робота з гілками</a></li>
 						<li class="menu__item"><a href="" class="menu__link">GitHub</a></li>
 					</ul>
