--- a/base.html
+++ b/base.html
@@ -25,7 +25,7 @@
 						<li class="menu__item menu__item--active"><a href="/base.html" class="menu__link">Основи Git</a></li>
 						<li class="menu__item"><a href="/commands.html" class="menu__link">Команди Git</a></li>
 						<li class="menu__item "><a href="/branch-work.html" class="menu__link">Робота з гілками</a></li>
-						<li class="menu__item"><a href="" class="menu__link">GitHub</a></li>
+						<li class="menu__item"><a href="/quiz.html" class="menu__link">Тест</a></li>
 					</ul>
 				</div>
 			</nav>
